# prune

./: .gitignore  README.md  pyproject.toml  pytest.ini
prune/: __init__.py  __main__.py  analyzer.py  cli.py  config.py  constants.py  core.py  metadata.py  overrides.py  parser.py  pypi.py
tests/: README.md  conftest.py  test_prune_commands.py
