[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prune-requirements"
version = "0.2.1-alpha"
description = "Python Requirements & Unused Node Eliminator - analyze and prune unused dependencies"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["requirements", "dependencies", "pip", "python", "pruning", "analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "arguably>=1.2.0",
]

[project.scripts]
prune = "prune.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/prune"
Repository = "https://github.com/yourusername/prune"
Issues = "https://github.com/yourusername/prune/issues"

[tool.setuptools]
packages = ["prune"]
